tests/fixtures/stl/errors/test_fstring_unclosed.stl
// Error: unclosed { in a format string
// expect-error: Unclosed '{' in format string
define n = "x";
prompt p { is { f is text<length=4>; } return { use f; } annotate { f as f"hello {n"; } }
export p as main;
